--- a/ShopTARge23/ShopTARge23/Views/Accounts/Register.cshtml
+++ b/ShopTARge23/ShopTARge23/Views/Accounts/Register.cshtml
@@ -32,6 +32,12 @@
                 <label asp-for="City"></label>
                 <input asp-for="City" class="form-control" />
             </div>
+
+            <div class="form-group">
+                <label asp-for="Name"></label>
+                <input asp-for="Name" class="form-control" />
+            </div>
+
             <button type="submit" class="btn btn-primary">
                 Register
             </button>
